--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/cdk",
-  "version": "17.3.0-next.0",
+  "version": "17.3.0-rc.0",
   "description": "Angular Material Component Development Kit",
   "repository": {
     "type": "git",
