--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/cdk",
-  "version": "18.0.0-rc.3",
+  "version": "18.0.0",
   "description": "Angular Material Component Development Kit",
   "repository": {
     "type": "git",
@@ -202,8 +202,8 @@
     }
   },
   "peerDependencies": {
-    "@angular/core": "^18.0.0-0 || ^18.1.0-0 || ^18.2.0-0 || ^18.3.0-0 || ^19.0.0-0",
-    "@angular/common": "^18.0.0-0 || ^18.1.0-0 || ^18.2.0-0 || ^18.3.0-0 || ^19.0.0-0",
+    "@angular/core": "^18.0.0 || ^19.0.0",
+    "@angular/common": "^18.0.0 || ^19.0.0",
     "rxjs": "^6.5.3 || ^7.4.0"
   },
   "dependencies": {
