main - ff36c80 fix(material/tree): add levelAccessor, childrenAccessor, TreeKeyManager; a11y and docs improvements (#29062)

--- a/package.json
+++ b/package.json
@@ -80,6 +80,12 @@
       "esm": "./esm2022/coercion/index.mjs",
       "default": "./fesm2022/coercion.mjs"
     },
+    "./coercion/private": {
+      "types": "./coercion/private/index.d.ts",
+      "esm2022": "./esm2022/coercion/private/private_public_index.mjs",
+      "esm": "./esm2022/coercion/private/private_public_index.mjs",
+      "default": "./fesm2022/coercion/private.mjs"
+    },
     "./collections": {
       "types": "./collections/index.d.ts",
       "esm2022": "./esm2022/collections/collections_public_index.mjs",
