--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/cdk",
-  "version": "20.1.0-next.2",
+  "version": "20.1.0-rc.0",
   "description": "Angular Material Component Development Kit",
   "repository": {
     "type": "git",
