--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/cdk",
-  "version": "20.2.0-rc.0",
+  "version": "20.2.0",
   "description": "Angular Material Component Development Kit",
   "repository": {
     "type": "git",
@@ -158,8 +158,8 @@
     }
   },
   "peerDependencies": {
-    "@angular/core": "^20.0.0-0 || ^20.1.0-0 || ^20.2.0-0 || ^20.3.0-0 || ^21.0.0-0",
-    "@angular/common": "^20.0.0-0 || ^20.1.0-0 || ^20.2.0-0 || ^20.3.0-0 || ^21.0.0-0",
+    "@angular/core": "^20.0.0 || ^21.0.0",
+    "@angular/common": "^20.0.0 || ^21.0.0",
     "rxjs": "^6.5.3 || ^7.4.0"
   },
   "dependencies": {
