--- a/package.json
+++ b/package.json
@@ -171,6 +171,7 @@
     "migrations": "./schematics/migration.json",
     "packageGroup": [
       "@angular/material",
+      "@angular/aria",
       "@angular/cdk",
       "@angular/cdk-experimental",
       "@angular/material-experimental",
