--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/cdk",
-  "version": "21.1.0-next.1",
+  "version": "21.1.0-next.1+sha-d71c0a8",
   "description": "Angular Material Component Development Kit",
   "repository": {
     "type": "git",
