--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/cdk",
-  "version": "21.0.2",
+  "version": "21.0.2+sha-be533f1",
   "description": "Angular Material Component Development Kit",
   "repository": {
     "type": "git",
