--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/cdk",
-  "version": "21.1.0-next.4+sha-fdb22b6",
+  "version": "21.1.0-rc.0+sha-a1ea86c",
   "description": "Angular Material Component Development Kit",
   "repository": {
     "type": "git",
