--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@angular/cdk",
-  "version": "21.2.0-next.5+sha-c485374",
+  "version": "21.2.0-rc.0+sha-dc8675d",
   "description": "Angular Material Component Development Kit",
   "repository": {
     "type": "git",
